[project]
name = "chemprep"
version = "0.0.1"
authors = [
  { name="Santu Chall and Dr. Sourav Roy", email="santuchal@gmail.com" },
]
description = "A Python library for molecular fingerprinting and similarity calculations."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
rdkit
]

[project.urls]
"Homepage" = "https://github.com/google/gemini"
"Bug Tracker" = "https://github.com/google/gemini/issues"
